Closed Bug 629208 Opened 13 years ago Closed 13 years ago

imap save as draft doesn't increment unread count of drafts folder

Categories

(MailNews Core :: Composition, defect)

x86
Windows 7
defect
Not set
normal

Tracking

(blocking-thunderbird5.0 needed)

RESOLVED FIXED
Thunderbird 5.0b1
Tracking Status
blocking-thunderbird5.0 --- needed

People

(Reporter: Bienvenu, Assigned: Bienvenu)

Details

Attachments

(1 file, 1 obsolete file)

Attached patch proposed fix (obsolete) — Splinter Review
Drafts are now saved as unread, but we're not incrementing the unread count on the imap drafts folder. Patch upcoming.
Attachment #507287 - Flags: review?(bugzilla)
Comment on attachment 507287 [details] [diff] [review]
proposed fix

multiple saves keep incrementing the count, need to figure out why.
Attachment #507287 - Flags: review?(bugzilla)
David, is this the drafts issue where we aren't showing a draft count until refresh of the folder?

If so marking as blocking 3.3 as I think we're going to need this with the change in the drafts situation.

(In reply to comment #1)
> multiple saves keep incrementing the count, need to figure out why.

Note that when it happens to me, I normally get multiple copies in the drafts folder - it doesn't seem to replace the existing copy.
blocking-thunderbird5.0: --- → needed
(In reply to comment #1)
> Comment on attachment 507287 [details] [diff] [review]
> proposed fix
> 
> multiple saves keep incrementing the count, need to figure out why.

Yeah, this patch isn't right by itself, because we don't decrement the count for the copy that we delete.
(In reply to comment #3)

> Yeah, this patch isn't right by itself, because we don't decrement the count
> for the copy that we delete.

and the reason for that is we don't delete the pseudo-hdrs until the user selects the drafts folder, and we playback the offline events which correspond to the pseudo headers. We could update the drafts folder after saving the message to the draft folder, which would keep everything up to date. Or we could keep track of the fact that we need to delete the original pseudo-hdr when we re-save the draft.
Attached patch simple fixSplinter Review
this simply updates the imap drafts folder after doing a save as draft - that keeps everything up to date.
Attachment #507287 - Attachment is obsolete: true
Attachment #524296 - Flags: review?(bugzilla)
Comment on attachment 524296 [details] [diff] [review]
simple fix

Ok, my brief test shows this as good, and it is what I'd expect the patch to be. So r=Standard8 - lets get this into the tree and we can verify it further.
Attachment #524296 - Flags: review?(bugzilla) → review+
fixed on trunk - http://hg.mozilla.org/comm-central/rev/3109ba7f3a36, patch in bug had a bit of cruft from a previous patch.
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.3a4
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: