fix bug 629208, imap save as draft doesn't increment unread count, r=standard8